--- a/outputFileMapper.tt
+++ b/outputFileMapper.tt
@@ -13,7 +13,7 @@ private:
 public:
   OutputFileMapper(const std::string& file_path, size_t size):
   CONTENT([=] {
-    fd = open(file_path.c_str(), O_RDWR | O_CREAT, (mode_t)0600);
+    fd = open(file_path.c_str(), O_RDWR | O_CREAT | O_TRUNC, (mode_t)0600);
     if (fd < 0)
       throw std::runtime_error("Unable to create file " + file_path + "!");
 
